<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrandsRegister">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/homebt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homebt" />

        <EditText
            android:id="@+id/nametb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nametb"
            android:inputType="textPersonName" />

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"/>

        <Button
            android:id="@+id/newbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newbt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>